# acrap-amazon-bestsellers

./: .env.sample  Makefile  README.md  pyproject.toml
bestsellers/: main.py
bestsellers/bestsellers/: bestsellers_urls.py  items.py  middlewares.py  pipelines.py  settings.py
bestsellers/bestsellers/helpers/: fake_header.py
bestsellers/bestsellers/infra/: rabbitmq_publisher.py
bestsellers/bestsellers/spiders/: amazon_bestsellers.py
