[tool.poetry]
name = "scrap-amazon-bestsellers"
version = "3.0.2"
description = "Scrap Amazon Bestsellers"
authors = ["guimassoqueto <gui.massoqueto@gmail.com>"]
readme = "README.md"
packages = [{include = "bestsellers/**/*py"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.10.1"
scrapy-playwright = "^0.0.33"
python-dotenv = "^1.0.0"
pika = "^1.3.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
